--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "framer-motion": "^8.5.5",
     "next": "13.1.6",
+    "popmotion": "^11.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-swipeable": "^7.0.0",
+    "swiper": "^8.4.7"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
